2011-08-21  Marc Glisse  <marc.glisse@inria.fr>

	* tests/cxx/t-ops2.cc: check mul-div by 2.

	* gmpxx.h (__GMPXX_CONSTANT): New macro (__builtin_constant_p).
	(__gmp_binary_lshift): Move before multiplication. Optimize x << 0.
	(__gmp_binary_rshift): Move before division. Optimize x >> 0.
	(__gmp_binary_plus): Optimize x + 0. Rewrite rational + integer.
	(__gmp_binary_minus): Optimize x - 0 and 0 - x.
	Rewrite rational - integer.
	(__gmp_binary_multiplies): Optimize x * 2^n.
	(__gmp_binary_divides): Optimize x / 2^n.
	(__gmp_binary_*): Deduplicate code for symmetric operations.

2011-08-18  Torbjorn Granlund  <tege@gmplib.org>

	* printf/doprntf.c (__gmp_doprnt_mpf): For DOPRNT_CONV_FIXED, ask for
	one more digit.

2011-08-17  Torbjorn Granlund  <tege@gmplib.org>

	* mpf/sub.c: Fix typo in copy condition.  Delay an allocation.

2011-08-12  Torbjorn Granlund  <tege@gmplib.org>

	* gmp-impl.h (LIMBS_PER_DIGIT_IN_BASE): Fix typo.

2011-08-10  Torbjorn Granlund  <tege@gmplib.org>

	* gmp-impl.h (DIGITS_IN_BASEGT2_FROM_BITS): New.
	(DIGITS_IN_BASE_FROM_BITS): Compute more accurate result.
	(MPN_SIZEINBASE): Use DIGITS_IN_BASEGT2_FROM_BITS.

	* tests/rand/t-lc2exp.c (check_bigc): Call abort after reporting error.

2011-08-09  Torbjorn Granlund  <tege@gmplib.org>

	* mpz/out_str.c (mpz_out_str): Reinsert accidentally deleted str_size
	adjustment.

	* gmp-impl.h (DIGITS_IN_BASE_FROM_BITS): Simplify, also avoiding
	overflow for base 2.

2011-08-07  Torbjorn Granlund  <tege@gmplib.org>

	* gmp-impl.h (struct bases): Add log2b and logb2 field, remove
	chars_per_limb_exactly field.
	(DIGITS_IN_BASE_FROM_BITS): New.
	(DIGITS_IN_BASE_PER_LIMB): New.
	(LIMBS_PER_DIGIT_IN_BASE): New.
	* gen-bases.c: Generate log2b and logb2 fields; do not generate
	chars_per_limb_exactly field.
	* mpf/get_str.c mpf/out_str.c mpf/set_str.c mpn/generic/get_str.c
	  mpn/generic/sizeinbase.c mpq/get_str.c mpz/inp_str.c mpz/out_str.c
	  mpz/set_str.c printf/doprntf.c tune/speed.h tune/tuneup.c: